--- a/shop.html
+++ b/shop.html
@@ -60,7 +60,7 @@
 
         <ul class="sidenav" id="mobile-demo">
             <span>Меню</span>
-             <div class="divider"></div>
+            <div class="divider"></div>
             <li><a href="#">Главная</a></li>
             <li><a href="#">Магазин</a></li>
             <li><a href="#">О нас</a></li>
@@ -76,7 +76,9 @@
                     <i class="fa-solid fa-chevron-left arrow arrow-right grey-text"></i>
 
                     <div class="carousel-item white-text" href="#one!">
-                        <img src="img/shop/Image.png" alt="">
+                        <div class="wrap">
+                            <img src="img/shop/Image.png" alt="">
+                        </div>
                     </div>
                     <div class="carousel-item white-text" href="#two!">
                     </div>
@@ -90,7 +92,7 @@
                     <div class="type">
                         Электрогитары
                     </div>
-                     <h2 class="name">
+                    <h2 class="name">
                         IBANEZ GRX70QA-TRB
                     </h2>
                     <div class="shortChars hide-on-med-and-down">
@@ -110,7 +112,10 @@
 
             <div class="fullDesc">
                 <div class="chars">
-                    <h4 class="name">Характеристики:</h4>
+                    <div class="head">
+                        <h4 class="name">Характеристики:</h4>
+                        <i class="fa-solid fa-chevron-left arrow arrow-down grey-text"></i>
+                    </div>
                     <div class="mainInf">
                         Цвет: черный<br>
                         Гриф: клен<br>
@@ -121,6 +126,19 @@
                         <i class="fa-solid fa-chevron-left arrow arrow-down grey-text"></i>
                     </button>
                 </div>
+                <div class="desc">
+                    <div class="head">
+                        <h4 class="name">Описание</h4>
+                        <i class="fa-solid fa-chevron-left arrow arrow-down black-text"></i>
+                    </div>
+                </div>
+                <div class="desc">
+                    <div class="head">
+                        <h4 class="name">Наличие</h4>
+                        <i class="fa-solid fa-chevron-left arrow arrow-down black-text"></i>
+                    </div>
+                </div>
+
             </div>
         </div>
 
