--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <section class="home">
       <div class="next"></div>
-      <div class="slide">
+      <div class="container">
         <div class="mini-menu">
           <img src="img/Logo.svg" alt="" class="logo" />
           <i class="fa-solid fa-bars bars"></i>
@@ -35,8 +35,7 @@
           <div class="info">
             <h1></h1>
             <div class="options">
-              <button class="shop">Начать покупки</button>
-              <button class="more">Узнать больше</button>
+              <button class="shop">Перейти в магазин</button>
             </div>
           </div>
           <div class="picture">
@@ -47,14 +46,16 @@
       </div>
     </section>
     <section class="categories">
-      <h2>Категории</h2>
-      <div class="line"></div>
-      <div class="wrap">
-        <div class="cards">
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
+      <div class="container">
+        <h2>Категории</h2>
+        <div class="line"></div>
+        <div class="wrap">
+          <div class="cards">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+          </div>
         </div>
       </div>
     </section>
