--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="picture">
-            <img src="img/home/hobby.jpg" alt="" class="curent" />
+            <img src="" alt="" class="curent" />
             <img src="" alt="" class="next-pic" />
           </div>
         </div>
@@ -47,10 +47,18 @@
     </section>
     <section class="categories">
       <div class="container">
-        <h2>Категории</h2>
+        <h2 class="sec-name">Категории</h2>
         <div class="line"></div>
         <div class="wrap">
-          <div class="cards">
+          <div class="cards"></div>
+        </div>
+      </div>
+    </section>
+    <section class="top-sellers">
+      <div class="container">
+        <h2 class="sec-name">Популярные товары</h2>
+        <div class="line"></div>
+        <div class="wrap">
           </div>
         </div>
       </div>
