--- a/index.html
+++ b/index.html
@@ -59,9 +59,17 @@
         <h2 class="sec-name">Популярные товары</h2>
         <div class="line"></div>
         <div class="wrap">
-          </div>
         </div>
       </div>
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <h2 class="sec-name">Отзывы</h2>
+        <div class="line"></div>
+        <div class="wrap">
+    </section>
+    <section class="footer">
+      
     </section>
     <script src="js/script.js"></script>
   </body>
