--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       <div class="container">
         <h2 class="sec-name">Отзывы</h2>
         <div class="line"></div>
-        <div class="wrap">
+        <div class="wrap"></div>
+        <div class="indicators"></div>
+
     </section>
     <section class="footer">
       
