--- a/index.html
+++ b/index.html
@@ -67,11 +67,49 @@
         <h2 class="sec-name">Отзывы</h2>
         <div class="line"></div>
         <div class="wrap"></div>
-        <div class="indicators"></div>
+        <div class="switch">
+          <i class="fa-solid fa-chevron-left"></i>
+          <div class="indicators"></div>
+          <i class="fa-solid fa-chevron-right"></i>
+        </div>
 
     </section>
     <section class="footer">
-      
+      <div class="container">
+        <div class="wrap">
+          <div class="column desc">
+            <img src="img/Logo.svg" alt="Barett">
+            <p>Магазин гитар Barett - это крупный музыкальный магазин, специализирующийся на продаже гитар, гитарного оборудования и аксессуаров. В магазине представлены все виды гитар: от начинающих и любителей до профессиональных музыкантов.</p>
+          </div>
+          <div class="sep"></div>
+          <div class="column navigation">
+            <span>Навигация</span>
+              <ul>
+                <li>Главная</li>
+                <li>Магазин
+                  <ul>
+                    <li>Электрогитары</li>
+                    <li>Акустические гитары</li>
+                    <li>Классическае гитары</li>
+                    <li>Аксессуары</li>
+                  </ul>
+                </li>
+                <li>Корзина</li>
+              </ul>
+          </div>
+          <div class="sep"></div>
+          <div class="column contacts">
+              <span>Связаться с нами</span>
+              <ul>
+                <li>+7 370 730-93-40</li>
+                <li>barett@gmail.com</li>
+                <li>Адреса магазинов</li>
+                <li>О нас</li>
+                <li>Новости</li>
+              </ul>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="js/script.js"></script>
   </body>
