--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
     <!-- link materialize -->
     <link rel="stylesheet" href="css/style.min.css" />
     <!-- link style css -->
+    <link rel="stylesheet" href="fonts/logo/style.css">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <span class="cur-page">Главная</span>
+        <div class="mini-menu">
+          <span class="icon-Logo logo"></span>
+          <i class="fa-solid fa-bars bars"></i>
+        </div>
+      </div>
+    </header>
     <section class="home">
       <div class="next"></div>
       <div class="container">
-        <div class="mini-menu">
-          <img src="img/Logo.svg" alt="" class="logo" />
-          <i class="fa-solid fa-bars bars"></i>
-        </div>
         <div class="wrap">
           <div class="info">
             <h1></h1>
@@ -78,7 +84,7 @@
       <div class="container">
         <div class="wrap">
           <div class="column desc">
-            <img src="img/Logo.svg" alt="Barett">
+            <span class="icon-Logo"></span>
             <p>Магазин гитар Barett - это крупный музыкальный магазин, специализирующийся на продаже гитар, гитарного оборудования и аксессуаров. В магазине представлены все виды гитар: от начинающих и любителей до профессиональных музыкантов.</p>
           </div>
           <div class="sep"></div>
@@ -108,6 +114,21 @@
                 <li>Новости</li>
               </ul>
           </div>
+        </div>
+        <div class="social">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+        <div class="legal">
+          <span>Политика конфиденциальности</span>
+          <div class="sep"></div>
+          <span>Пользовательское соглашение</span>
+          <div class="sep"></div>
+          <span>Отказ от ответственности</span>
+          <div class="sep"></div>
+          <span>Политика использования файлов cookie</span>
         </div>
       </div>
     </section>
