--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </header>
   <section class="home">
-    <div class="next"></div>
+    <div class="next hide-on-small-only"></div>
     <div class="container">
       <div class="wrap">
         <div class="info">
