--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </div>
   </header>
   <section class="home">
-    <div class="next hide-on-small-only"></div>
+    <div class="next">
+      
+    </div>
     <div class="container">
       <div class="wrap">
         <div class="info">
@@ -42,7 +44,6 @@
         </div>
         <div class="picture">
           <img src="" alt="" class="curent" />
-          <img src="" alt="" class="next-pic" />
         </div>
       </div>
     </div>
