--- a/index.html
+++ b/index.html
@@ -1,134 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
+    <!-- link gogh font -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <!-- link google material icons -->
+    <script
+      src="https://kit.fontawesome.com/b0de6a042c.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
+    <!-- link fontawesome -->
+    <link rel="stylesheet" href="css/materialize.min.css" />
+    <!-- link materialize -->
+    <link rel="stylesheet" href="css/style.min.css" />
+    <!-- link style css -->
+    <link rel="stylesheet" href="fonts/logo/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
-  <!-- link gogh font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <!-- link google material icons -->
-  <script src="https://kit.fontawesome.com/b0de6a042c.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-  <!-- link fontawesome -->
-  <link rel="stylesheet" href="css/materialize.min.css" />
-  <!-- link materialize -->
-  <link rel="stylesheet" href="css/style.min.css" />
-  <!-- link style css -->
-  <link rel="stylesheet" href="fonts/logo/style.css">
-</head>
+  <body>
+    <div class="menu-wrap hidden">
+      <div class="menu">
 
-<body>
-  <header>
-    <div class="container">
-      <span class="cur-page">Главная</span>
-      <div class="mini-menu">
-        <span class="icon-Logo logo"></span>
-        <i class="fa-solid fa-bars bars"></i>
       </div>
     </div>
-  </header>
-  <section class="home">
-    <div class="container">
-      <div class="wrap">
-        <div class="info">
-          <h1></h1>
-          <div class="options">
-            <button class="shop">Перейти в магазин</button>
+    <header>
+      <div class="container">
+        <span class="cur-page">Главная</span>
+        <div class="mini-menu">
+          <span class="icon-Logo logo"></span>
+          <i class="fa-solid fa-bars bars"></i>
+        </div>
+      </div>
+    </header>
+    <section class="home">
+      <div class="container">
+        <div class="wrap">
+          <div class="info">
+            <h1></h1>
+            <div class="options">
+              <a href="shop.html">
+                <button class="shop">Перейти в магазин</button>
+              </a>
+            </div>
+          </div>
+          <div class="picture">
+            <img src="" alt="" class="curent" />
           </div>
         </div>
-        <div class="picture">
-          <img src="" alt="" class="curent" />
+      </div>
+    </section>
+    <section class="categories">
+      <div class="container">
+        <h2 class="sec-name">Категории</h2>
+        <div class="line"></div>
+        <div class="wrap">
+          <div class="cards"></div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="categories">
-    <div class="container">
-      <h2 class="sec-name">Категории</h2>
-      <div class="line"></div>
-      <div class="wrap">
-        <div class="cards"></div>
+    </section>
+    <section class="top-sellers">
+      <div class="container">
+        <h2 class="sec-name">Популярные товары</h2>
+        <div class="line"></div>
+        <div class="wrap"></div>
       </div>
-    </div>
-  </section>
-  <section class="top-sellers">
-    <div class="container">
-      <h2 class="sec-name">Популярные товары</h2>
-      <div class="line"></div>
-      <div class="wrap">
-      </div>
-    </div>
-  </section>
-  <section class="reviews">
-    <div class="container">
-      <h2 class="sec-name">Отзывы</h2>
-      <div class="line"></div>
-      <div class="wrap"></div>
-      <div class="switch">
-        <i class="fa-solid fa-chevron-left"></i>
-        <div class="indicators"></div>
-        <i class="fa-solid fa-chevron-right"></i>
-      </div>
-
-  </section>
-  <section class="footer">
-    <div class="container">
-      <div class="wrap">
-        <div class="column desc">
-          <span class="icon-Logo"></span>
-          <p>Магазин гитар Barett - это крупный музыкальный магазин, специализирующийся на продаже гитар, гитарного
-            оборудования и аксессуаров. В магазине представлены все виды гитар: от начинающих и любителей до
-            профессиональных музыкантов.</p>
-        </div>
-        <div class="sep"></div>
-        <div class="column navigation">
-          <span>Навигация</span>
-          <ul>
-            <li>Главная</li>
-            <li>Магазин
-              <ul>
-                <li>Электрогитары</li>
-                <li>Акустические гитары</li>
-                <li>Классическае гитары</li>
-                <li>Аксессуары</li>
-              </ul>
-            </li>
-            <li>Корзина</li>
-          </ul>
-        </div>
-        <div class="sep"></div>
-        <div class="column contacts">
-          <span>Связаться с нами</span>
-          <ul>
-            <li>+7 370 730-93-40</li>
-            <li>barett@gmail.com</li>
-            <li>Адреса магазинов</li>
-            <li>О нас</li>
-            <li>Новости</li>
-          </ul>
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <h2 class="sec-name">Отзывы</h2>
+        <div class="line"></div>
+        <div class="wrap"></div>
+        <div class="switch">
+          <i class="fa-solid fa-chevron-left"></i>
+          <div class="indicators"></div>
+          <i class="fa-solid fa-chevron-right"></i>
         </div>
       </div>
-      <div class="social">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-youtube"></i>
+    </section>
+    <section class="footer">
+      <div class="container">
+        <div class="wrap">
+          <div class="column desc">
+            <span class="icon-Logo"></span>
+            <p>
+              Магазин гитар Barett - это крупный музыкальный магазин,
+              специализирующийся на продаже гитар, гитарного оборудования и
+              аксессуаров. В магазине представлены все виды гитар: от начинающих
+              и любителей до профессиональных музыкантов.
+            </p>
+          </div>
+          <div class="sep"></div>
+          <div class="column navigation">
+            <span>Навигация</span>
+            <ul>
+              <li>Главная</li>
+              <li>
+                Магазин
+                <ul>
+                  <li>Электрогитары</li>
+                  <li>Акустические гитары</li>
+                  <li>Классическае гитары</li>
+                  <li>Аксессуары</li>
+                </ul>
+              </li>
+              <li>Корзина</li>
+            </ul>
+          </div>
+          <div class="sep"></div>
+          <div class="column contacts">
+            <span>Связаться с нами</span>
+            <ul>
+              <li>+7 370 730-93-40</li>
+              <li>barett@gmail.com</li>
+              <li>Адреса магазинов</li>
+              <li>О нас</li>
+              <li>Новости</li>
+            </ul>
+          </div>
+        </div>
+        <div class="social">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+        <div class="legal">
+          <span>Политика конфиденциальности</span>
+          <div class="sep"></div>
+          <span>Пользовательское соглашение</span>
+          <div class="sep"></div>
+          <span>Отказ от ответственности</span>
+          <div class="sep"></div>
+          <span>Политика использования файлов cookie</span>
+        </div>
       </div>
-      <div class="legal">
-        <span>Политика конфиденциальности</span>
-        <div class="sep"></div>
-        <span>Пользовательское соглашение</span>
-        <div class="sep"></div>
-        <span>Отказ от ответственности</span>
-        <div class="sep"></div>
-        <span>Политика использования файлов cookie</span>
-      </div>
-    </div>
-  </section>
-  <script src="js/script.js"></script>
-</body>
-
+    </section>
+    <script src="js/script.js"></script>
+  </body>
 </html>
