code separated to different files

--- a/index.html
+++ b/index.html
@@ -20,15 +20,45 @@
     <!-- link fontawesome -->
     <link rel="stylesheet" href="css/materialize.min.css" />
     <!-- link materialize -->
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/home.min.css" />
+    <link rel="stylesheet" href="css/items.min.css" />
+    <link rel="stylesheet" href="css/base.min.css" />
     <!-- link style css -->
     <link rel="stylesheet" href="fonts/logo/style.css" />
   </head>
 
   <body>
-    <div class="menu-wrap hidden">
+    <div class="menu-wrap full-hid">
       <div class="menu">
-
+        <i class="fa-solid fa-xmark"></i>
+        <h2 class="sec-name">Меню</h2>
+        <div class="sep"></div>
+        <div class="navigation column">
+          <span>Навигация</span>
+          <ul>
+            <li><a href="index.html" class="link-active">Главная</a></li>
+            <li>
+              <a href="shop.html">Магазин</a>
+              <ul>
+                <li><a href="electric.html">Электрогитары</a></li>
+                <li><a href="acoustic.html">Акустические гитары</a></li>
+                <li><a href="classical.html">Классическае гитары</a></li>
+                <li><a href="acessories.html">Аксессуары</a></li>
+              </ul>
+            </li>
+            <li><a href="cart.html">Корзина</a></li>
+          </ul>
+        </div>
+        <div class="contacts column">
+          <span>Связаться с нами</span>
+          <ul>
+            <li><a href="">+7 370 730-93-40</a></li>
+            <li><a href="barett@gmail.com">barett@gmail.com</a></li>
+            <li><a href="adress.html">Адреса магазинов</a></li>
+            <li><a href="abuot.html">О нас</a></li>
+            <li><a href="news.html">Новости</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <header>
@@ -101,28 +131,28 @@
           <div class="column navigation">
             <span>Навигация</span>
             <ul>
-              <li>Главная</li>
+              <li><a href="index.html" class="link-active">Главная</a></li>
               <li>
-                Магазин
+                <a href="shop.html">Магазин</a>
                 <ul>
-                  <li>Электрогитары</li>
-                  <li>Акустические гитары</li>
-                  <li>Классическае гитары</li>
-                  <li>Аксессуары</li>
+                  <li><a href="electric.html">Электрогитары</a></li>
+                  <li><a href="acoustic.html">Акустические гитары</a></li>
+                  <li><a href="classical.html">Классическае гитары</a></li>
+                  <li><a href="acessories.html">Аксессуары</a></li>
                 </ul>
               </li>
-              <li>Корзина</li>
+              <li><a href="cart.html">Корзина</a></li>
             </ul>
           </div>
           <div class="sep"></div>
           <div class="column contacts">
             <span>Связаться с нами</span>
             <ul>
-              <li>+7 370 730-93-40</li>
-              <li>barett@gmail.com</li>
-              <li>Адреса магазинов</li>
-              <li>О нас</li>
-              <li>Новости</li>
+              <li><a href="">+7 370 730-93-40</a></li>
+              <li><a href="barett@gmail.com">barett@gmail.com</a></li>
+              <li><a href="adress.html">Адреса магазинов</a></li>
+              <li><a href="abuot.html">О нас</a></li>
+              <li><a href="news.html">Новости</a></li>
             </ul>
           </div>
         </div>
@@ -143,6 +173,8 @@
         </div>
       </div>
     </section>
-    <script src="js/script.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/items.js"></script>
+    <script src="js/base.js"></script>
   </body>
 </html>
